--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     </symbol>
 	</svg>
 
+  <header class="app-header"></header>
   <div id="app"></div>
   <script src="bundle.js"></script>
 </body>
